# pytest-shortcuts

./: .pre-commit-config.yaml  LICENSE  Makefile  README.md  pytest_shortcuts.py  setup.cfg  setup.py  tox.ini
tests/: test_shortcuts.py
