[metadata]
name = pytest-shortcuts
version = 0.3.0
description = Expand command-line shortcuts listed in pytest configuration
long_description = file: README.md
long_description_content_type = text/markdown
license = BSD-3-Clause
author = Will Hardy
author_email = public@willhardy.com.au
maintainer = Will Hardy
maintainer_email = public@willhardy.com.au
url = https://github.com/willhardy/pytest-shortcuts
project_urls =
    Code = https://github.com/willhardy/pytest-shortcuts
classifiers =
    Development Status :: 4 - Beta
    Framework :: Pytest
    Intended Audience :: Developers
    Topic :: Software Development :: Testing
    Programming Language :: Python
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.6
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3 :: Only
    Programming Language :: Python :: Implementation :: CPython
    Programming Language :: Python :: Implementation :: PyPy
    Operating System :: OS Independent
    License :: OSI Approved :: BSD License

[options]
python_requires = >= 3.6
py_modules = pytest_shortcuts
install_requires =
    pytest>=3.5.0
    python-dotenv>=0.14.0

[options.entry_points]
pytest11 =
    shortcuts = pytest_shortcuts

[flake8]
# E731 do not assign a lambda expression, use a def
# E203 This is not PEP8 compliant (whitespace before :)
# E501 (line length) is replaced by B950 (110% is ok)
# W503 operators are easier to read at start of line
max-line-length = 80
select = C,E,F,W,B,B950
ignore = E731, E203, E501, W503
